# ARoS_ROS_interface

./: CMakeLists.txt  README.md
PanTilt/: CMakeLists.txt  CommunicationServerPanTilt.cpp  CommunicationServerPanTilt.h  EnvironmentVars.cpp  EnvironmentVars.h  Files_Directories.cpp  Files_Directories.h  MathDefines.h  PanTilt.cpp  PanTiltWrapper_defs.h  ansi_unicode_definitions.h  string_operations.cpp  string_operations.h
PanTilt/pantilt_ptud46/: CMakeLists.txt  pantilt_definitions.h  pantilt_ptud46.cpp  pantilt_ptud46.h
UpperLimb/: CMakeLists.txt
UpperLimb/Amtec_PStepServer/: Amtec_PStepServerConfig.cmake  CMakeLists.txt
UpperLimb/Amtec_PStepServer/include/: AmtecPStepServer.h
UpperLimb/Amtec_PStepServer/src/: AmtecPStepServer.cpp
UpperLimb/Core/: Joint_States.cpp  Joint_States.h  UpperLimb.cpp  UpperLimbArmReqProcessor.cpp  UpperLimbHandReqProcessor.cpp  UpperLimbReqProcessor.cpp  UpperLimbReqProcessor.h
UpperLimb/amtec_lwa_7dof/: AmtecLWA7dof.cpp  AmtecLWA7dof.h  Amtec_Definitions.h  CMakeLists.txt
UpperLimb/amtec_lwa_7dof/Init_Files/: LWAFTS5_Schunk_Spain_Robot2.ini  LWAFTS5_Schunk_Spain_Robot2_2arms.ini  LWAFTS5_Schunk_Spain_Robot2_left.ini  LWAFTS6_Schunk_Spain_Robot2.ini
UpperLimb/amtec_lwa_7dof/Init_Files/Legacy/: LWAFTS5_Schunk_Spain_Robot.ini  LWAFTS5_Schunk_Spain_Robot_tablemounted.ini  LWAFTS6_Schunk_Spain_Robot.ini  LWAFTS6_mobileplatform_noFTC_Robot.ini  LWA_noFTS_Schunk_Spain_Robot.ini  LWA_noFTS_Schunk_Spain_Robot.ini.txt  LWA_tablemounted_noFTS_Schunk_Spain_Robot.ini
UpperLimb/amtec_lwa_7dof/common/: m5apiw32.h
UpperLimb/barrett_hand_826X/: CMakeLists.txt  barrett_hand_826X.cpp  barrett_hand_826X.h  barrett_hand_definitions.h
UpperLimb/config/: amtec_aros_gripper_left.ini  amtec_aros_gripper_right.ini  amtec_aros_no_gripper_left.ini  amtec_aros_no_gripper_right.ini  amtec_aros_no_gripper_two_arms.ini  amtec_dumbo_gripper.ini  amtec_dumbo_no_gripper.ini  amtec_jumbo_gripper.ini  amtec_jumbo_no_gripper.ini  upperlimb.ini
VisionBot/: CMakeLists.txt
VisionBot/Config/Segmentation/Videre/: Segmentation_Parameters (Construction Task Full Offline testing).ini  test.ini
include/: ARoS_ros_interface.h  ARoS_ros_interfaceDlg.h  About_AROS_ros_interface.h  Joint_States.h  Node.h  Object.h  ROS_Comm_dlg.h  YarpCommInterface.h  circular_buffer.h
res/: ARoS_ros_interface.aps  ARoS_ros_interface.rc  ARoS_ros_interface.rc2  resource.h
src/: ARoS_ros_interface.cpp  ARoS_ros_interfaceDlg.cpp  About_AROS_ros_interface.cpp  Joint_States.cpp  Node.cpp  Object.cpp  ROS_Comm_dlg.cpp  YarpCommInterface.cpp  stdafx.cpp
